AYS-340 | Role Creation Service Validation Errors Have Been Resolved (#346)